# goodvibes

./: .env.example  .gitignore  LICENSE  Procfile  README.md  app.json  pyproject.toml  requirements.txt  server.py
goodvibes/: server.cfg.example  server.py
goodvibes/static/css/: style.css
goodvibes/static/js/: app.js  custom.js
goodvibes/templates/: index.html
tools/: bootstrap  gunicorn  python  ruff  start  uv-compile  uv-install
