[project]
name = "goodvibes"
version = "0.1.0"
description = "chill out music from /f/"
requires-python = "==3.14.*"
dependencies = [
    "flask",
    "flask-admin",
    "flask-basicauth",
    "gunicorn",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "PT",  # flake8-pytest-style
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "UP",  # pyupgrade
]

ignore = [
    "G004", # Allow f-string logging statements
]

[tool.ruff.lint.isort]
known-first-party = ["goodvibes"]
